WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156288
[css-grid] Fix positioned items with grid gaps
https://bugs.webkit.org/show_bug.cgi?id=156288
Summary
[css-grid] Fix positioned items with grid gaps
Manuel Rego Casasnovas
Reported
2016-04-06 05:00:52 PDT
[css-grid] Fix positioned items with grid gaps
Attachments
Patch
(27.13 KB, patch)
2016-04-06 05:03 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2016-04-06 05:02:57 PDT
Another port from Blink:
https://codereview.chromium.org/1841323003/
Manuel Rego Casasnovas
Comment 2
2016-04-06 05:03:36 PDT
Created
attachment 275770
[details]
Patch
WebKit Commit Bot
Comment 3
2016-04-08 01:52:18 PDT
Comment on
attachment 275770
[details]
Patch Clearing flags on attachment: 275770 Committed
r199223
: <
http://trac.webkit.org/changeset/199223
>
WebKit Commit Bot
Comment 4
2016-04-08 01:52:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug